--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,8 @@ services:
     volumes:
       - .postgres:/var/lib/postgresql/data
       - ./init.sh:/docker-entrypoint-initdb.d/init.sh
-      - ./src/database/dump.sql:/docker-entrypoint-initdb.d/dump.sql
+      - ./src/database/dump.sql:/docker-entrypoint-initdb.d/init.sql
+      - ./init-db.sh:/docker-entrypoint-initdb.d/init-db.sh
     restart: always
     healthcheck :
       test: [ "CMD", "pg_isready", "-q", "-d", "${POSTGRES_DB}", "-U", "${POSTGRES_USER}" ]
